build static registration page and work a bit on the API
