# swagger_server/models/__init__.py
@@ -4,7 +4,14 @@
 from __future__ import absolute_import
 # import models into model package
 from swagger_server.models.captcha_prompt import CaptchaPrompt
+from swagger_server.models.change_verication_mail_address import ChangeVericationMailAddress
+from swagger_server.models.email_verification_token import EmailVerificationToken
+from swagger_server.models.finish_registration import FinishRegistration
 from swagger_server.models.init_login_session import InitLoginSession
+from swagger_server.models.is_username_available import IsUsernameAvailable
 from swagger_server.models.next_frame import NextFrame
+from swagger_server.models.primary_account_details import PrimaryAccountDetails
+from swagger_server.models.resend_verification_mail import ResendVerificationMail
 from swagger_server.models.submitted_frame import SubmittedFrame
 from swagger_server.models.successful_authentication import SuccessfulAuthentication
+from swagger_server.models.username import Username
