# swagger_server/models/email_verification_token.py
@@ -1,0 +1,96 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class EmailVerificationToken(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, username: str=None, verification_code: str=None):  # noqa: E501
+        """EmailVerificationToken - a model defined in Swagger
+
+        :param username: The username of this EmailVerificationToken.  # noqa: E501
+        :type username: str
+        :param verification_code: The verification_code of this EmailVerificationToken.  # noqa: E501
+        :type verification_code: str
+        """
+        self.swagger_types = {
+            'username': str,
+            'verification_code': str
+        }
+
+        self.attribute_map = {
+            'username': 'username',
+            'verification_code': 'verification-code'
+        }
+        self._username = username
+        self._verification_code = verification_code
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'EmailVerificationToken':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The EmailVerificationToken of this EmailVerificationToken.  # noqa: E501
+        :rtype: EmailVerificationToken
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def username(self) -> str:
+        """Gets the username of this EmailVerificationToken.
+
+        The name of the account that should be verified  # noqa: E501
+
+        :return: The username of this EmailVerificationToken.
+        :rtype: str
+        """
+        return self._username
+
+    @username.setter
+    def username(self, username: str):
+        """Sets the username of this EmailVerificationToken.
+
+        The name of the account that should be verified  # noqa: E501
+
+        :param username: The username of this EmailVerificationToken.
+        :type username: str
+        """
+        if username is None:
+            raise ValueError("Invalid value for `username`, must not be `None`")  # noqa: E501
+
+        self._username = username
+
+    @property
+    def verification_code(self) -> str:
+        """Gets the verification_code of this EmailVerificationToken.
+
+        A secret code used to prove ownership of an email address  # noqa: E501
+
+        :return: The verification_code of this EmailVerificationToken.
+        :rtype: str
+        """
+        return self._verification_code
+
+    @verification_code.setter
+    def verification_code(self, verification_code: str):
+        """Sets the verification_code of this EmailVerificationToken.
+
+        A secret code used to prove ownership of an email address  # noqa: E501
+
+        :param verification_code: The verification_code of this EmailVerificationToken.
+        :type verification_code: str
+        """
+        if verification_code is None:
+            raise ValueError("Invalid value for `verification_code`, must not be `None`")  # noqa: E501
+
+        self._verification_code = verification_code
