# swagger_server/models/is_username_available.py
@@ -1,0 +1,64 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class IsUsernameAvailable(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, is_available: bool=None):  # noqa: E501
+        """IsUsernameAvailable - a model defined in Swagger
+
+        :param is_available: The is_available of this IsUsernameAvailable.  # noqa: E501
+        :type is_available: bool
+        """
+        self.swagger_types = {
+            'is_available': bool
+        }
+
+        self.attribute_map = {
+            'is_available': 'is-available'
+        }
+        self._is_available = is_available
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'IsUsernameAvailable':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The IsUsernameAvailable of this IsUsernameAvailable.  # noqa: E501
+        :rtype: IsUsernameAvailable
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def is_available(self) -> bool:
+        """Gets the is_available of this IsUsernameAvailable.
+
+
+        :return: The is_available of this IsUsernameAvailable.
+        :rtype: bool
+        """
+        return self._is_available
+
+    @is_available.setter
+    def is_available(self, is_available: bool):
+        """Sets the is_available of this IsUsernameAvailable.
+
+
+        :param is_available: The is_available of this IsUsernameAvailable.
+        :type is_available: bool
+        """
+        if is_available is None:
+            raise ValueError("Invalid value for `is_available`, must not be `None`")  # noqa: E501
+
+        self._is_available = is_available
