# swagger_server/models/username.py
@@ -1,0 +1,66 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class Username(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, username: str=None):  # noqa: E501
+        """Username - a model defined in Swagger
+
+        :param username: The username of this Username.  # noqa: E501
+        :type username: str
+        """
+        self.swagger_types = {
+            'username': str
+        }
+
+        self.attribute_map = {
+            'username': 'username'
+        }
+        self._username = username
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Username':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The Username of this Username.  # noqa: E501
+        :rtype: Username
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def username(self) -> str:
+        """Gets the username of this Username.
+
+        An account name  # noqa: E501
+
+        :return: The username of this Username.
+        :rtype: str
+        """
+        return self._username
+
+    @username.setter
+    def username(self, username: str):
+        """Sets the username of this Username.
+
+        An account name  # noqa: E501
+
+        :param username: The username of this Username.
+        :type username: str
+        """
+        if username is None:
+            raise ValueError("Invalid value for `username`, must not be `None`")  # noqa: E501
+
+        self._username = username
